--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,8 @@ p {
 
 
 
+
+
 .container {
     width: 960px;
     max-width: 100%;
@@ -74,6 +76,8 @@ p {
     align-items: center;
     flex-wrap: wrap;
     padding-top: 20px;
+    
+    
 }
 .EMlogo {
     cursor: pointer;
@@ -108,6 +112,26 @@ h1 {
 
 
 
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color:#26A699; /* Set a background color */
+    color: white; /* Text color */
+    font-family: "Lato", sans-serif;
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #3E649E; /* Add a dark-grey background on hover */
+  }
 
 
 
@@ -240,10 +264,15 @@ h1 {
     color: #FFFFFF;
     text-decoration: none;
     padding-top:40px; 
-
-    
+    transition: transform .2s;
+   
 }
 
+
+.item5:hover {
+      transform: scale(1.2) translate(46px,0); 
+   
+}
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -386,4 +415,40 @@ h1 {
         text-decoration: none; 
     }
 
+    .item5:hover {
+        transform: none; 
+     
+  }
+  
+
 }
+
+
+.preloader {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: 100000;
+    background-color: white;
+    top: 0;
+    display: flex;
+    align-items: center;
+}
+
+.preloader img {
+    animation: spin 3s ease;
+    transition: all;
+    width: 100px;
+    margin: 0 auto;
+}
+@keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    50% {
+      transform: rotate(360deg);
+    }
+    100% {
+      transform: rotate(720deg);
+    }
+  }
