--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ h1 {
         "two"
         "three"
         "four";   
-        grid-template-rows: 250x 210px 250px 210px;
+        grid-template-rows: 210px 210px 210px 210px;
         grid-template-columns: 1fr;
         margin: 20px 5px 20px 5px;
                
@@ -353,7 +353,7 @@ h1 {
         "two"
         "three"
         "five";
-        grid-template-rows: 250px 300px 200px 100px 100px;
+        grid-template-rows: 300px 300px 200px 150px 100px;
         grid-template-columns: 1fr;
         margin: 20px 20px 20px 20px;
         text-align: center;
