--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ h1 {
         "two"
         "three"
         "five";
-        grid-template-rows: 400px 300px 200px 200px 100px;
+        grid-template-rows: 300px 300px 200px 150px 100px;
         grid-template-columns: 1fr;
         margin: 20px 20px 20px 20px;
         text-align: center;
@@ -371,6 +371,12 @@ h1 {
         grid-area: three;
         padding-right: 0px;
         padding-top: 20px;
+    }
+
+    .item4 {
+        width: auto;
+        max-width: 100%;
+        height: auto;
     }
 
     .item5 {
