--- a/css/style3.css
+++ b/css/style3.css
@@ -72,6 +72,13 @@ body {
         padding-top: 50px;
         padding-bottom: 5px;
         padding-left: 10px;
-        
+    }
+
+    .contact .container img {
+        padding-top: 20px;
+        width: auto;
+        max-width: 100%;
+        height: auto;
+        padding-right: 10px;
     }
 }
